--- a/contracts_tracking/get_tokenlist.ipynb
+++ b/contracts_tracking/get_tokenlist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -97,20 +97,20 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10</td>\n",
+       "      <td>0x03e5b5930f3a42b56af4a982b10e60957bdd2f61</td>\n",
+       "      <td>Prime</td>\n",
+       "      <td>D2D</td>\n",
+       "      <td>18</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
        "      <td>0x09448876068907827ec15F49A8F1a58C70b04d45</td>\n",
        "      <td>Ripae Share ETH</td>\n",
        "      <td>sETHo</td>\n",
        "      <td>18</td>\n",
        "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x0994206dfe8de6ec6920ff4d779b0d950605fb53</td>\n",
-       "      <td>Curve DAO Token</td>\n",
-       "      <td>CRV</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -122,7 +122,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
+       "      <th>203</th>\n",
        "      <td>10</td>\n",
        "      <td>0xef6301da234fc7b0545c6e877d3359fe0b9e50a4</td>\n",
        "      <td>SUKU</td>\n",
@@ -131,7 +131,7 @@
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>186</th>\n",
+       "      <th>204</th>\n",
        "      <td>10</td>\n",
        "      <td>0xf98dcd95217e15e05d8638da4c91125e59590b07</td>\n",
        "      <td>Kromatika</td>\n",
@@ -140,7 +140,7 @@
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>187</th>\n",
+       "      <th>205</th>\n",
        "      <td>10</td>\n",
        "      <td>0xfD389Dc9533717239856190F42475d3f263a270d</td>\n",
        "      <td>Granary Token</td>\n",
@@ -149,7 +149,7 @@
        "      <td>[velodrome-finance]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188</th>\n",
+       "      <th>206</th>\n",
        "      <td>10</td>\n",
        "      <td>0xfDeFFc7Ad816BF7867C642dF7eBC2CC5554ec265</td>\n",
        "      <td>Beefy Velo</td>\n",
@@ -158,7 +158,7 @@
        "      <td>[velodrome-finance]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>189</th>\n",
+       "      <th>207</th>\n",
        "      <td>10</td>\n",
        "      <td>0xff733b2a3557a7ed6697007ab5d11b79fdd1b76b</td>\n",
        "      <td>Across Protocol Token</td>\n",
@@ -168,7 +168,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>190 rows × 6 columns</p>\n",
+       "<p>208 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -176,29 +176,29 @@
        "0         10  0x00F932F0FE257456b32dedA4758922E56A4F4b42   \n",
        "1         10  0x00a35FD824c717879BF370E70AC6868b95870Dfb   \n",
        "2         10  0x01B8b6384298D4848E3BE63D4C9D17830EeE488A   \n",
-       "3         10  0x09448876068907827ec15F49A8F1a58C70b04d45   \n",
-       "4         10  0x0994206dfe8de6ec6920ff4d779b0d950605fb53   \n",
+       "3         10  0x03e5b5930f3a42b56af4a982b10e60957bdd2f61   \n",
+       "4         10  0x09448876068907827ec15F49A8F1a58C70b04d45   \n",
        "..       ...                                         ...   \n",
-       "185       10  0xef6301da234fc7b0545c6e877d3359fe0b9e50a4   \n",
-       "186       10  0xf98dcd95217e15e05d8638da4c91125e59590b07   \n",
-       "187       10  0xfD389Dc9533717239856190F42475d3f263a270d   \n",
-       "188       10  0xfDeFFc7Ad816BF7867C642dF7eBC2CC5554ec265   \n",
-       "189       10  0xff733b2a3557a7ed6697007ab5d11b79fdd1b76b   \n",
+       "203       10  0xef6301da234fc7b0545c6e877d3359fe0b9e50a4   \n",
+       "204       10  0xf98dcd95217e15e05d8638da4c91125e59590b07   \n",
+       "205       10  0xfD389Dc9533717239856190F42475d3f263a270d   \n",
+       "206       10  0xfDeFFc7Ad816BF7867C642dF7eBC2CC5554ec265   \n",
+       "207       10  0xff733b2a3557a7ed6697007ab5d11b79fdd1b76b   \n",
        "\n",
        "                          name  symbol  decimals            list_name  \n",
        "0                        Paper   PAPER        18  [ethereum-optimism]  \n",
        "1                    Iron Bank      IB        18  [velodrome-finance]  \n",
        "2    DAOhaus Token on Optimism    HAUS        18  [ethereum-optimism]  \n",
-       "3              Ripae Share ETH   sETHo        18  [velodrome-finance]  \n",
-       "4              Curve DAO Token     CRV        18  [ethereum-optimism]  \n",
+       "3                        Prime     D2D        18  [ethereum-optimism]  \n",
+       "4              Ripae Share ETH   sETHo        18  [velodrome-finance]  \n",
        "..                         ...     ...       ...                  ...  \n",
-       "185                       SUKU    SUKU        18  [ethereum-optimism]  \n",
-       "186                  Kromatika    KROM        18  [ethereum-optimism]  \n",
-       "187              Granary Token   GRAIN        18  [velodrome-finance]  \n",
-       "188                 Beefy Velo  BeVELO        18  [velodrome-finance]  \n",
-       "189      Across Protocol Token     ACX        18  [ethereum-optimism]  \n",
+       "203                       SUKU    SUKU        18  [ethereum-optimism]  \n",
+       "204                  Kromatika    KROM        18  [ethereum-optimism]  \n",
+       "205              Granary Token   GRAIN        18  [velodrome-finance]  \n",
+       "206                 Beefy Velo  BeVELO        18  [velodrome-finance]  \n",
+       "207      Across Protocol Token     ACX        18  [ethereum-optimism]  \n",
        "\n",
-       "[190 rows x 6 columns]"
+       "[208 rows x 6 columns]"
       ]
      },
      "metadata": {},
@@ -232,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-21 09:06:37.595 | INFO     | duneapi_utils:get_dune_data:41 - Results available at https://dune.com/queries/2420477\n",
-      "2023-07-21 09:06:38.456 | INFO     | duneapi_utils:get_dune_data:86 - ✨ Results saved as csv_outputs/my_query_results.csv, with 517 rows and 4 columns.\n"
+      "2023-09-17 08:59:33.632 | INFO     | duneapi_utils:get_dune_data:44 - Results available at https://dune.com/queries/2420477\n",
+      "2023-09-17 08:59:34.382 | INFO     | duneapi_utils:get_dune_data:89 - ✨ Results saved as csv_outputs/my_query_results.csv, with 560 rows and 4 columns.\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -295,83 +295,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>0x7d14206c937e70e19e3a5b94011faf0d5b3928e2</td>\n",
-       "      <td>VITA</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0x03e5b5930f3a42b56af4a982b10e60957bdd2f61</td>\n",
+       "      <td>D2D</td>\n",
        "      <td>18</td>\n",
-       "      <td>VitaDAO Token</td>\n",
+       "      <td>Prime</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>0xA8d83Cd5102b0A412931B12255D218B0b0E7152C</td>\n",
-       "      <td>OPL</td>\n",
+       "      <th>62</th>\n",
+       "      <td>0x629c2fd5d5f432357465b59d7832389a89956f0b</td>\n",
+       "      <td>COC</td>\n",
        "      <td>18</td>\n",
-       "      <td>OP Launcher</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>0xBB6BBaa0F6D839A00c82B10747aBc3b7E2eEcc82</td>\n",
-       "      <td>IBEX</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Impermax</td>\n",
+       "      <td>CryptoOracle Collective</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>0xC27D9BC194a648fE3069955a5126699C4e49351C</td>\n",
-       "      <td>AMKT</td>\n",
+       "      <th>74</th>\n",
+       "      <td>0x6c518f9D1a163379235816c543E62922a79863Fa</td>\n",
+       "      <td>bwAJNA</td>\n",
        "      <td>18</td>\n",
-       "      <td>Alongside Crypto Market Index</td>\n",
+       "      <td>Burn Wrapped AJNA</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>0xC5B3AC2DF8D8D7AC851F763a5b3Ff23B4A696d59</td>\n",
-       "      <td>APT</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Aptos</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>0xCa98d642E158c3016E1c75dbcC3D5ECFe3E02A19</td>\n",
-       "      <td>ETS WETH/USDC</td>\n",
-       "      <td>6</td>\n",
-       "      <td>ETS Night over Arrakis</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>0xDeBa4568ff4CC84B420bcbFb228De5b7F2807a5c</td>\n",
-       "      <td>CHAM</td>\n",
+       "      <th>87</th>\n",
+       "      <td>0x76c37F9949e05b37C8373d155C1Fef46a6858481</td>\n",
+       "      <td>ePendle</td>\n",
        "      <td>18</td>\n",
-       "      <td>Champion</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>0xb1aE0a34DC3976d98C1741C92b798dAF8E0e1e11</td>\n",
-       "      <td>TRX</td>\n",
-       "      <td>6</td>\n",
-       "      <td>TRON</td>\n",
+       "      <td>Equilibria Pendle</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>0xba1Cf949c382A32a09A17B2AdF3587fc7fA664f1</td>\n",
-       "      <td>SOL</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Solana</td>\n",
+       "      <th>99</th>\n",
+       "      <td>0x8368Dca5CE2a4Db530c0F6e535d90B6826428Dee</td>\n",
+       "      <td>FPIS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Frax Price Index Share</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>0x8637725aDa78db0674a679CeA2A5e0A0869EF4A1</td>\n",
+       "      <td>NFTE</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NFTEarthOFT</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>0x96bBD55479e9923512dcc95Eb7Df5edDe6FB9874</td>\n",
+       "      <td>wOpenX</td>\n",
+       "      <td>18</td>\n",
+       "      <td>OpenX Optimism</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>0xAd42D013ac31486B73b6b059e748172994736426</td>\n",
+       "      <td>1INCH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1INCH Token</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6</td>\n",
+       "      <td>crvUSD</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Curve.Fi USD Stablecoin</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>0xa925f4057d6E6C8FAf8bdE537Ad14BA91A1D0337</td>\n",
+       "      <td>SYNTH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Synth</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>0xaf3A6f67Af1624d3878A8d30b09FAe7915DcA2a0</td>\n",
+       "      <td>EQB</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Equilibria Token</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>184</th>\n",
-       "      <td>0xeAeAdAC73baaF4cB8B024dE9D65B2eeFa722856C</td>\n",
-       "      <td>RFWSTETH</td>\n",
+       "      <td>0xc5d43a94e26fca47a9b21cf547ae4aa0268670e1</td>\n",
+       "      <td>FPI</td>\n",
        "      <td>18</td>\n",
-       "      <td>Respawn Finance Wrapped Staked Ethereum</td>\n",
+       "      <td>Frax Price Index</td>\n",
+       "      <td>[ethereum-optimism]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>0xc871cCf95024eFa2CbcE69B5B775D2a1DcF49c1B</td>\n",
+       "      <td>GROW</td>\n",
+       "      <td>18</td>\n",
+       "      <td>ValleyDAO Token</td>\n",
        "      <td>[ethereum-optimism]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -379,29 +403,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                                        address         symbol  decimals  \\\n",
-       "90   0x7d14206c937e70e19e3a5b94011faf0d5b3928e2           VITA        18   \n",
-       "114  0xA8d83Cd5102b0A412931B12255D218B0b0E7152C            OPL        18   \n",
-       "122  0xBB6BBaa0F6D839A00c82B10747aBc3b7E2eEcc82           IBEX        18   \n",
-       "123  0xC27D9BC194a648fE3069955a5126699C4e49351C           AMKT        18   \n",
-       "125  0xC5B3AC2DF8D8D7AC851F763a5b3Ff23B4A696d59            APT         8   \n",
-       "128  0xCa98d642E158c3016E1c75dbcC3D5ECFe3E02A19  ETS WETH/USDC         6   \n",
-       "133  0xDeBa4568ff4CC84B420bcbFb228De5b7F2807a5c           CHAM        18   \n",
-       "155  0xb1aE0a34DC3976d98C1741C92b798dAF8E0e1e11            TRX         6   \n",
-       "157  0xba1Cf949c382A32a09A17B2AdF3587fc7fA664f1            SOL         9   \n",
-       "184  0xeAeAdAC73baaF4cB8B024dE9D65B2eeFa722856C       RFWSTETH        18   \n",
+       "                                        address   symbol  decimals  \\\n",
+       "3    0x03e5b5930f3a42b56af4a982b10e60957bdd2f61      D2D        18   \n",
+       "62   0x629c2fd5d5f432357465b59d7832389a89956f0b      COC        18   \n",
+       "74   0x6c518f9D1a163379235816c543E62922a79863Fa   bwAJNA        18   \n",
+       "87   0x76c37F9949e05b37C8373d155C1Fef46a6858481  ePendle        18   \n",
+       "99   0x8368Dca5CE2a4Db530c0F6e535d90B6826428Dee     FPIS        18   \n",
+       "101  0x8637725aDa78db0674a679CeA2A5e0A0869EF4A1     NFTE        18   \n",
+       "116  0x96bBD55479e9923512dcc95Eb7Df5edDe6FB9874   wOpenX        18   \n",
+       "126  0xAd42D013ac31486B73b6b059e748172994736426    1INCH        18   \n",
+       "137  0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6   crvUSD        18   \n",
+       "164  0xa925f4057d6E6C8FAf8bdE537Ad14BA91A1D0337    SYNTH        18   \n",
+       "167  0xaf3A6f67Af1624d3878A8d30b09FAe7915DcA2a0      EQB        18   \n",
+       "184  0xc5d43a94e26fca47a9b21cf547ae4aa0268670e1      FPI        18   \n",
+       "185  0xc871cCf95024eFa2CbcE69B5B775D2a1DcF49c1B     GROW        18   \n",
        "\n",
-       "                                        name            list_name  \n",
-       "90                             VitaDAO Token  [ethereum-optimism]  \n",
-       "114                              OP Launcher  [velodrome-finance]  \n",
-       "122                                 Impermax  [ethereum-optimism]  \n",
-       "123            Alongside Crypto Market Index  [ethereum-optimism]  \n",
-       "125                                    Aptos  [ethereum-optimism]  \n",
-       "128                   ETS Night over Arrakis  [velodrome-finance]  \n",
-       "133                                 Champion  [velodrome-finance]  \n",
-       "155                                     TRON  [ethereum-optimism]  \n",
-       "157                                   Solana  [ethereum-optimism]  \n",
-       "184  Respawn Finance Wrapped Staked Ethereum  [ethereum-optimism]  "
+       "                        name            list_name  \n",
+       "3                      Prime  [ethereum-optimism]  \n",
+       "62   CryptoOracle Collective  [ethereum-optimism]  \n",
+       "74         Burn Wrapped AJNA  [ethereum-optimism]  \n",
+       "87         Equilibria Pendle  [ethereum-optimism]  \n",
+       "99    Frax Price Index Share  [ethereum-optimism]  \n",
+       "101              NFTEarthOFT  [ethereum-optimism]  \n",
+       "116           OpenX Optimism  [ethereum-optimism]  \n",
+       "126              1INCH Token  [ethereum-optimism]  \n",
+       "137  Curve.Fi USD Stablecoin  [ethereum-optimism]  \n",
+       "164                    Synth  [ethereum-optimism]  \n",
+       "167         Equilibria Token  [ethereum-optimism]  \n",
+       "184         Frax Price Index  [ethereum-optimism]  \n",
+       "185          ValleyDAO Token  [ethereum-optimism]  "
       ]
      },
      "metadata": {},
@@ -411,6 +441,39 @@
    "source": [
     "adds = df[~df['contract_address'].isin(dune_list['contract_address'])]\n",
     "display(adds[['address','symbol','decimals', 'name','list_name']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ",(0x03e5b5930f3a42b56af4a982b10e60957bdd2f61, 'D2D', 18, 'underlying')\n",
+      ",(0x629c2fd5d5f432357465b59d7832389a89956f0b, 'COC', 18, 'underlying')\n",
+      ",(0x6c518f9D1a163379235816c543E62922a79863Fa, 'bwAJNA', 18, 'underlying')\n",
+      ",(0x76c37F9949e05b37C8373d155C1Fef46a6858481, 'ePendle', 18, 'underlying')\n",
+      ",(0x8368Dca5CE2a4Db530c0F6e535d90B6826428Dee, 'FPIS', 18, 'underlying')\n",
+      ",(0x8637725aDa78db0674a679CeA2A5e0A0869EF4A1, 'NFTE', 18, 'underlying')\n",
+      ",(0x96bBD55479e9923512dcc95Eb7Df5edDe6FB9874, 'wOpenX', 18, 'underlying')\n",
+      ",(0xAd42D013ac31486B73b6b059e748172994736426, '1INCH', 18, 'underlying')\n",
+      ",(0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6, 'crvUSD', 18, 'underlying')\n",
+      ",(0xa925f4057d6E6C8FAf8bdE537Ad14BA91A1D0337, 'SYNTH', 18, 'underlying')\n",
+      ",(0xaf3A6f67Af1624d3878A8d30b09FAe7915DcA2a0, 'EQB', 18, 'underlying')\n",
+      ",(0xc5d43a94e26fca47a9b21cf547ae4aa0268670e1, 'FPI', 18, 'underlying')\n",
+      ",(0xc871cCf95024eFa2CbcE69B5B775D2a1DcF49c1B, 'GROW', 18, 'underlying')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Assuming your DataFrame is named 'adds'\n",
+    "for index, row in adds.iterrows():\n",
+    "    sql_values_str = f\",({row['address']}, '{row['symbol']}', {row['decimals']}, 'underlying')\"\n",
+    "    print(sql_values_str)"
    ]
   }
  ],
